🔴 COMPLETE BACKEND RELIABILITY REFACTOR - Production Ready
✅ DATABASE CONNECTION HARDENING:
- MySQL pool with proper timeouts and keep-alive
- Connection validation with retry logic (max 5 attempts)
- Automatic retry with 5-second delays
- Clear error logging for connection issues
- Server continues running if DB temporarily unavailable

✅ STRICT QUERY VALIDATION:
- ALL queries use parameterized placeholders (?)
- NO string interpolation in SQL
- Parameter count validation before execution
- Proper connection release after each query
- Structured error handling with try/catch

✅ AUTOMATIC TABLE CREATION:
- Creates all required tables on startup:
  - users (with JSON skills, proper indexes)
  - exchange_requests (with foreign keys, status enum)
  - exchange_feedback (complete relationships)
  - messages (with timestamp indexing)
  - quizzes (with JSON questions)
  - quiz_attempts (with score calculation)

✅ DATA SYNC VERIFICATION:
- Immediate SELECT after every INSERT to verify storage
- Immediate SELECT after every UPDATE to verify changes
- Throws error if record not found after operation
- Never assumes operations succeeded

✅ JSON SAFETY:
- safeParseJSON() and safeStringifyJSON() helpers
- Prevents server crashes from corrupted JSON
- Always stores JSON using JSON.stringify()
- Graceful fallback to empty arrays/objects

✅ DATABASE HEALTH ROUTE:
GET /api/db-status returns:
{
  connected: true/false,
  uptime: process.uptime(),
  tables: { users: true, messages: true, ... }
}

✅ TRANSACTION SUPPORT:
- transaction() helper function
- BEGIN/COMMIT/ROLLBACK for complex operations
- Used for exchange requests, quiz submissions, feedback
- Prevents partial writes - all or nothing

✅ FIXED USER UPDATE LOGIC:
- Preserves existing skills if not provided
- Never overwrites with undefined
- Validates required fields
- Safe JSON handling for skills arrays

✅ LOGGING CLEANUP:
- Removed excessive console.log statements
- Keeps only critical startup and error logs
- Clean reques

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@langchain/core": "^1.1.8",
     "@langchain/mistralai": "^1.0.2",
+    "axios": "^1.6.0",
     "firebase": "^12.6.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
