--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "mysql2": "^3.15.3",
     "axios": "^1.6.0",
+    "helmet": "^7.1.0",
     "@langchain/core": "^1.1.8",
     "@langchain/mistralai": "^1.0.2"
   },
